# swe1-app

./: .gitignore  .travis.yml  Dockerfile  README.md  WORKSPACE  build_for_ecr.sh  ecr_build_and_push.sh  ecr_login.sh  login_ecr.sh
.github/workflows/: deploy.yml  linters.yml  load_bazel.yml  sample.yml  tests.yml
backend/: BUILD.bazel  requirements.txt
backend/hello/: BUILD.bazel  settings.py
backend/polls/: BUILD
backend/polls/templates/polls/: detail.html  index.html
ci/: BUILD.bazel  README.md  example.travis.yml  pylint_flake8.py
ci/deploy/: BUILD.bazel  compose.yaml  deploy.sh
ci/deploy/backend/: Dockerfile  init.sh  nginx.conf
ci/lint/: BUILD.bazel  pylint_black.py
ci/testing/: BUILD.bazel  pytest_django.py
django-app/: BUILD.bazel
django-app/hello/: BUILD.bazel
django-app/polls/: BUILD
django/polls/: tests.py
root/: init.sh
root/app/hello/hello/: settings.py  wsgi.py
root/app/hello/polls/: models.py
root/app/hello/polls/migrations/: 0001_initial.py
root/etc/nginx/: nginx.conf
shortlist/: BUILD.bazel
shortlist-aws/: BUILD.bazel
shortlist/aws/: BUILD.bazel  aws_test.py  sample1.py  secrets.py
shortlist/backend/: BUILD.bazel  gunicorn_serve.py
shortlist/backend/hello/: BUILD.bazel  settings.py  urls.py  wsgi.py
shortlist/backend/polls/: BUILD.bazel  admin.py  apps.py  models.py  tests.py  urls.py  views.py
shortlist/backend/polls/migrations/: 0001_initial.py
shortlist/backend/polls/templates/polls/: results.html
shortlist/backend/static/polls/: style.css
tester/: BUILD.bazel  test_import.py
v1/: login_ecr.sh
v1/deploy/: create_ecs.py  deployment.py  functions.py  main.py
v1/root/: init.sh
v1/root/app/hello/hello/: urls.py
v1/root/app/hello/polls/: admin.py  tests.py  urls.py  views.py
v1/root/app/hello/templates/admin/: base_site.html
