load("@rules_python//python:defs.bzl", ["py_binary"])

py_binary(
  name = "py_black",
  srcs = [
    "pylint_black.py"
  ],
  deps = [
    "//third_party:black",
    "//third_party:toml",
    "//third_party:tomli",
    "//third_party:click",
    "//third_party:mypy_extensions",
    "//third_party:typing_extensions",
    "//third_party:platformdirs",
    "//third_party:pathspec",
  ],
  main = "pylint_black.py",
  visibility = [
    "//visibility:public",
  ]
)

py_binary(
  name = "py_flake8",
  srcs = [
    "pylint_flake8.py"
  ],
  deps = [
    "//third_party:flake8",
    "//third_party:mccabe",
    "//third_party:pyflakes",
    "//third_party:pycodestyle",
  ],
  main = "pylint_flake8.py",
  visibility = [
    "//visibility:public",
  ]
)