filegroup(
  name = "polls_static",
  srcs = glob([
    "static/**/*",
    "templates/**/*"
  ])
)

py_library(
  name = "polls",
  srcs = [
    "admin.py",
    "apps.py",
    "models.py",
    "tests.py",
    "urls.py",
    "views.py"
  ],
  data = [
    ":polls_static",
  ],
  visibility = [
    "//shortlist/backend:__subpackages__",
    "//ci/testing:__subpackages__",
    ]
)
